--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-  <form method="post" action="{{ url_for('auth.register')}}" class="px-4">
+  <form name="formRegistro" method="post" action="{{ url_for('auth.register')}}" class="px-4">
     <label for="username">Username</label>
     <input type="text" name="username" id="username" class="rounded-md mb-2" required>
     <label for="email address">Email Adress</label>
